fix(Table2): enhance table header styling and improve layout for better readability

--- a/Project4/milestone1/src/index.scss
+++ b/Project4/milestone1/src/index.scss
@@ -56,9 +56,7 @@ table {
     background-color: yellow;
 }
 
-th {
-    padding: 5px;
-}
+
 
 
 .bodyHeader {
@@ -71,6 +69,35 @@ th {
 
 
 
-table{
+table {
     border-collapse: collapse;
+    position: relative;
+    overflow: auto;
+
+    th,
+    td {
+        min-width: fit-content;
+        white-space: nowrap;
+        text-align: center;
+        padding: 5px;
+    }
+
+    th{
+        min-width: 160px;
+    }
+
+    .headerHighlight{
+        background-color: rgb(209, 209, 61);
+    }
+
+    .blueHeader{
+        background-color: skyblue;
+    }
+
+    .mainHeader{
+        position: sticky;
+        left: 0;
+        z-index: 100;
+        background-color: #fff;
+    }
 }
